[package]
name = "base64-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { version = "0.7" }
futures = { version = "0.3" }
bytes = "1.2"

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros"] }
